mobile header spacing resolved

--- a/src/assets/styles/pages/homepage.scss
+++ b/src/assets/styles/pages/homepage.scss
@@ -82,6 +82,12 @@
     }
   }
 
+
+}
+@include s{
+  h2{
+    margin-left: .6em;
+  }
 }
 
 
